Source/WebCore/inspector/InspectorStyleSheet.cpp
@@ -814,6 +814,9 @@ RefPtr<Inspector::Protocol::CSS::CSSStyleSheetHeader> InspectorStyleSheet::build
         .setSourceURL(finalURL())
         .setTitle(styleSheet->title())
         .setFrameId(m_pageAgent->frameId(frame))
+        .setIsInline(styleSheet->isInline() && styleSheet->startPosition() != TextPosition::minimumPosition())
+        .setStartLine(styleSheet->startPosition().m_line.zeroBasedInt())
+        .setStartColumn(styleSheet->startPosition().m_column.zeroBasedInt())
         .release();
 }
 
